# vtsimnx

./: .gitignore  3639999.has  3639999_no_radiation2.has  README.md  RUN_FASTAPI.md  api-uncommitted-2026-03-13.diff  calc_result.json  memo_type of nodes and branches.txt  neutoral_close.json  parsed_input_data.json  pyproject.toml  pytest.ini  run.py  run2.py  run_parse.py  vs_simheat_8760.py  wall_conductance.csv
acmodel/: CMakeLists.txt  acmodel.cpp  acmodel.h  aircon_spec.h  criepi_model.cpp  criepi_model.h  duct_central_model.cpp  latent_evaluate_model.cpp  refrigerant_calculator.h
api/: .gitignore  README.md  RUN_FASTAPI.md
app/: main.py  solver_runner.py
archenv/: archenv_core.cpp  archenv_fungal.cpp  archenv_fungal.h  archenv_jis.cpp  archenv_jis.h  archenv_pmv.cpp  archenv_pmv.h
docs/: README.md  acmodel_overview.md  aircon_control_overview.md  aircon_spec_reference.md  archenv_comfort_nocturnal_wind_usage.md  builder_input_quickstart.md  builder_json.md  building_environment_engineering_basics.md  developer_notes.md  legacy_repo_retirement_checklist.md  moisture_network_phase1.md  node_branch_schema.md  physics_math_notes.md  release_policy.md  repo_metadata.md  schedule_usage.md  simulation_overview.md  solar_usage.md  surface_usage.md  thermal_rc.md  thermal_response_factor.md  validation_strategy.md  vs_simheat_example.md
engine/: .gitignore  CONTRIBUTING.md  LICENSE  README.md
engine/solver/: CMakeLists.txt  simulation_runner.cpp  simulation_runner_helpers.cpp  vtsimnx_solver.cpp
engine/solver/aircon/: aircon_airflow.cpp  aircon_airflow.h  aircon_capacity.cpp  aircon_capacity.h  aircon_controller.cpp  aircon_controller.h  aircon_latent.cpp  aircon_latent.h  aircon_network_utils.cpp  aircon_network_utils.h  aircon_operation_mode.h
engine/solver/app/: vtsimnx_app.cpp  vtsimnx_app.h
engine/solver/core/humidity/: humidity_coupling.h  humidity_solver.cpp
engine/solver/core/thermal/: heat_calculation.h  thermal_direct_build.cpp  thermal_direct_internal.cpp  thermal_direct_internal.h  thermal_direct_postprocess.cpp  thermal_direct_response.h  thermal_direct_rhs.cpp  thermal_direct_solve.cpp  thermal_direct_topology.cpp  thermal_solver.h  thermal_solver_linear_direct.cpp
engine/solver/core/ventilation/: flow_calculation.h  flow_jacobian.h  pressure_constraints.cpp  pressure_constraints.h  pressure_solver.cpp  pressure_solver.h  pressure_solver_ceres.cpp  pressure_solver_fallback.cpp  pressure_solver_internal.h
engine/solver/network/: contaminant_network.h  humidity_network.h  thermal_network_outputs.cpp
engine/solver/output/: artifact_io.cpp  artifact_io.h
engine/solver/parser/: branches_parser.cpp  branches_parser.h
engine/solver/tests_cpp/: test_acmodel_core.cpp  test_aircon_controller.cpp  test_app_smoke.cpp  test_archenv_constants_registry.cpp  test_core_physics_known_solutions.cpp  test_fan_jacobian_sweep.cpp  test_flow_math.cpp  test_parser_branches_validation.cpp  test_refrigerant_calculator.cpp  test_thermal_advection_sign.cpp  test_thermal_direct_cache.cpp  test_thermal_linear_utils.cpp  test_transport_humidity_concentration.cpp
engine/solver/tests_cpp/data/: rac_reference_full.tsv
engine/solver/transport/: concentration_solver.h
engine/solver/types/: graph_types.h
examples/: 3639999.has  README.md  run_calc_humidity_moisture_minimal.py  run_calc_minimal.py  vs_simheat_r15.py  vs_simheat_sample.py
solver/: CMakeLists.txt  simulation_runner.cpp  simulation_runner.h  vtsim_solver.h  vtsimnx_solver.cpp  vtsimnx_solver_timing.h
solver/acmodel/: acmodel.cpp  acmodel.h  aircon_constants.cpp  aircon_constants.h  criepi_model.cpp  criepi_model.h  rac_model.cpp  refrigerant_calculator.cpp
solver/aircon/: aircon_controller.cpp  aircon_controller.h
solver/app/: vtsimnx_app.cpp
solver/core/: flow_calculation.h  flow_jacobian.h  heat_calculation.h  network_structures.h  physical_constants.h  pressure_constraints.h  pressure_solver.cpp  pressure_solver.h  pressure_solver_ceres.cpp  pressure_solver_fallback.cpp  pressure_solver_newton_gs.cpp  pressure_solver_newton_gs.h  thermal_constraints.h  thermal_solver.cpp  thermal_solver.h  thermal_solver_ceres.cpp  thermal_solver_ceres.h  thermal_solver_linear_direct.cpp  thermal_solver_linear_direct.h  thermal_solver_linear_gs.cpp  thermal_solver_linear_gs.h  thermal_solver_newton_gs.cpp  thermal_solver_newton_gs.h
solver/core/humidity/: humidity_coupling.cpp  humidity_coupling.h  humidity_solver.cpp  humidity_solver.h
solver/core/thermal/: thermal_direct_postprocess.cpp  thermal_direct_solve.cpp  thermal_linear_utils.h  thermal_solver.cpp
solver/network/: NETWORK_NAMING.md  contaminant_network.cpp  contaminant_network.h  contaminant_network_outputs.cpp  humidity_network.cpp  humidity_network.h  humidity_network_outputs.cpp  node_state_view.h  thermal_network.cpp  thermal_network.h  thermal_network_outputs.cpp  ventilation_network.cpp  ventilation_network.h  ventilation_network_outputs.cpp
solver/output/: artifact_io.cpp  artifact_io.h
solver/parser/: branches_parser.cpp  nodes_parser.cpp  nodes_parser.h  parser_utils.h  sim_constants_parser.cpp
solver/tests_cpp/: test_acmodel_core.cpp  test_aircon_controller.cpp  test_app_smoke.cpp  test_core_humidity_solver_entry.cpp  test_flow_math.cpp  test_network_rebuild.cpp  test_parser_branches_validation.cpp  test_parser_nodes_mode.cpp  test_parser_thermal_branches.cpp  test_transport_humidity_concentration.cpp
solver/transport/: concentration_solver.cpp  concentration_solver.h  humidity_solver.cpp  humidity_solver.h
solver/transport/humidity/: humidity_internal.cpp  humidity_internal.h
solver/types/: aircon_types.h  common_types.h  graph_types.h  results_types.h
solver/utils/: utils.h
spec/: archenv_constants.json
tests/: test_builder.py  test_main.py  test_parsers.py  test_solver_artifacts.py  test_solver_runner.py  test_solver_runner_unit.py  test_solver_schema_sizes.py  test_utils.py  test_validate.py
tests_py/: README.md  conftest.py  test_main.py  test_manifest_compat.py  test_solver_artifacts.py  (+2 more)
vtsimnx/: __init__.py  (+12 more)
(+249 files in other folders)
