[project]
name = "vtsimnx"
version = "0.1.0"
description = "Network-based ventilation and thermal simulation tool"
authors = [
  { name="Masato Iguchi", email="iguchi.masato@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=7",
]
astro = [
  "astropy>=5",
]

# パッケージ探索の明示設定（vtsim_config と vtsimnx を含める）
[tool.setuptools.packages.find]
include = ["vtsimnx*", "vtsim_config*"]
