[project]
name = "vtsimnx"
version = "1.0.2"
description = "Network-based ventilation and thermal simulation tool"
license = "MIT"
authors = [
  { name="Masato Iguchi", email="iguchi.masato@gmail.com" }
]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "requests>=2.31,<3",
]

[project.urls]
Repository = "https://github.com/iguchi-lab/vtsimnx"
Documentation = "https://github.com/iguchi-lab/vtsimnx/blob/main/README.md"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "black>=24",
  "ruff>=0.5",
  "mypy>=1.10",
]
astro = [
  "astropy>=5",
]

[tool.setuptools.packages.find]
include = ["vtsimnx*"]

[tool.pytest.ini_options]
testpaths = ["vtsimnx/tests"]
addopts = "-q"
markers = [
  "slow: long-running tests",
  "astro: requires astropy",
]
